[ENH] code styling , improve functionality
*closes #1354

--- a/indico/htdocs/css/Default.css
+++ b/indico/htdocs/css/Default.css
@@ -7703,7 +7703,10 @@ div.domain_control p {
     font-weight: bold; letter-spacing: 0.1em; line-height: 1.2em;
 }
 
-
+a.roomBookingRejectOccurrence {
+}
+a.roomBookingCancelOccurrence {
+}
 
 a.lightGreyLink {
     color: #888;
